--- a/package.json
+++ b/package.json
@@ -28,7 +28,16 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@ctrl/ngx-emoji-mart": "^9.3.0",
+    "@primeuix/themes": "^1.2.5",
+    "@tailwindcss/postcss": "^4.1.14",
+    "postcss": "^8.5.6",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.14",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
